syntax = "proto3";
package virtengine.marketplace.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/marketplace/v1";

// Msg defines the marketplace Msg service
service Msg {
  option (cosmos.msg.v1.service) = true;

  // WaldurCallback handles callbacks from Waldur integration
  rpc WaldurCallback(MsgWaldurCallback) returns (MsgWaldurCallbackResponse);
}

// MsgWaldurCallback handles callbacks from Waldur integration
message MsgWaldurCallback {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "marketplace/MsgWaldurCallback";

  string sender = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string callback_type = 2;
  string resource_id = 3;
  string status = 4;
  string payload = 5;
  bytes signature = 6;
}

// MsgWaldurCallbackResponse is the response for MsgWaldurCallback
message MsgWaldurCallbackResponse {}
